Fix cards on tablets

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -904,12 +904,16 @@ section:not(.hero) .health .card-title,
       display: inline-block;
       vertical-align: top;
       margin: 0 auto;
+      width: 30%;
+      padding: 0.67rem;
   }
 
   .grid .third + .third {
       display: inline-block;
       vertical-align: top;
       margin: 0 auto;
+      width: 30%;
+      padding: 0.67rem;
   }
 
   .button {
